fix issue where tabs shift to left on hover

--- a/src/app/workspace/screen/tabs.less
+++ b/src/app/workspace/screen/tabs.less
@@ -244,10 +244,11 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        overflow-x: hidden;
 
         &:hover,
         &:focus {
-            overflow-x: auto;
+            overflow-x: overlay;
         }
 
         .screen-tab {
